force-app/main/default/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture and store application logs for monitoring and troubleshooting purposes. It records important details such as component name, type, request/response data, error messages, and status codes. The Logger object provides a centralized repository for tracking system events, integration issues, and exceptions in Salesforce.</description>
    <label>Logger</label>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>SlNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>