force-app/main/default/objects/Logger__c/fields/CompomentName__c.field-meta.xml
<CustomField>
    <fullName>CompomentName__c</fullName>
    <description>Enter the name of the Apex Class, Flow, or LWC Component where the log originated. This helps in identifying the exact source of the error or event.</description>
    <inlineHelpText>Enter the name of the Apex Class, Flow, or LWC Component where the log originated. This helps in identifying the exact source of the error or event.</inlineHelpText>
    <label>CompomentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>