force-app/main/default/objects/Logger__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Detailed error or exception message captured from the system, integration, or user action. This helps in understanding the cause of failure and troubleshooting the issue.</description>
    <inlineHelpText>Stores the detailed error or exception message for debugging.</inlineHelpText>
    <label>Error Message</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>