force-app/main/default/objects/Logger__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <label>LogType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error Log</fullName>
            </value>
            <value>
                <fullName>Integration Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>