force-app/main/default/objects/Logger__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Contains the request payload sent during an integration or API callout. Used for debugging and validating the data passed to external systems.</description>
    <inlineHelpText>Stores the request payload sent to an external system or API.</inlineHelpText>
    <label>Request Body</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>