force-app/main/default/objects/Logger__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Contains the response payload received from an external system or API. Used for debugging and validating the data returned during an integration.</description>
    <inlineHelpText>Stores the response payload received from an external system or API.</inlineHelpText>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>